--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.3.1",
   "description": "A review scraper made for google maps",
   "main": "index.js",
+  "types": "index.d.ts",
   "type": "module",
   "scripts": {
+    "build": "tsc",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,8 +21,12 @@
     "axios": "^1.7.4",
     "hex2dec": "^1.1.2"
   },
+  "devDependencies": {
+    "typescript": "^5.0.0"
+  },
   "files": [
     "index.js",
+    "index.d.ts",
     "src/",
     "ReadMe.md",
     "LICENSE"
